--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,20 @@
     "@lucirace/medium-common": "^1.0.0",
     "axios": "^1.6.8",
     "dom": "^0.0.3",
+    "dompurify": "^3.1.5",
+    "html-to-react": "^1.7.0",
+    "icons": "^1.0.0",
+    "jodit-react": "^4.1.2",
+    "prime": "^0.5.0",
+    "primereact": "^10.6.6",
+    "quill": "^2.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
